<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item1
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home"/>

    <item1
            android:id="@+id/navigation_educationHub"
            android:icon="@drawable/education"
            android:title="@string/title_educationHub"/>
    <item1
            android:id="@+id/navigation_calender"
            android:icon="@drawable/calendar"
            android:title="@string/title_calender"/>
    <item1

            android:id="@+id/navigation_account"
            android:icon="@drawable/account"
            android:title="@string/title_account"/>
    <item1
            android:id="@+id/navigation_more"
            android:icon="@drawable/more"
            android:title="@string/title_more"/>

</menu>
