<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:id="@+id/layout_id"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <RelativeLayout
                android:padding="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textStyle="italic"
                    android:textSize="18sp"
                    android:text="@string/add_new_money_out_item"
                    android:layout_height="wrap_content" />
            <android.support.design.widget.TextInputLayout
                    android:layout_below="@+id/title"
                    android:id="@+id/inputLayoutItemName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/gray">
                <android.support.design.widget.TextInputEditText
                        android:id="@+id/inputEditTextItemName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:cursorVisible="true"
                        android:gravity="center|start|bottom"
                        android:hint="@string/item_name"
                        android:inputType="number"
                        android:maxLength="10"
                        android:paddingBottom="10dp"
                        android:textColor="@color/black_effective"
                        android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>
           <LinearLayout
                   android:layout_below="@id/inputLayoutItemName"
                   android:id="@+id/categoryLL"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">
               <TextView
                       android:text="@string/category"
                       android:layout_width="0dp"
                       android:layout_weight="0.4"
                       android:layout_height="wrap_content"/>
               <RadioGroup
                       android:elevation="10dp"
                       android:layout_marginLeft="10dp"
                       android:id="@+id/category"
                       android:layout_width="0dp"
                       android:layout_weight="0.6"
                       android:layout_height="wrap_content"
                       android:orientation="vertical"
                       tools:targetApi="lollipop"
                       android:layout_marginStart="10dp">
                   <RadioButton
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/Input" />

                   <RadioButton
                           android:id="@+id/personal_radiobutton_Female"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/labour" />
               </RadioGroup>
           </LinearLayout>

            <Button
                    android:id="@+id/saveButton"
                    android:layout_marginTop="5dp"
                    android:layout_below="@id/categoryLL"
                    android:text="@string/save"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:background="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>