<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        >
    <android.support.v7.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="60dp"
            app:cardCornerRadius="7dp"
            app:cardElevation="@dimen/card_elevation_10">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/title_login"
                    android:textAllCaps="true"
                    android:textSize="20sp" />

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputLayoutPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/gray"
            >
                <android.support.design.widget.TextInputEditText
                        android:id="@+id/inputEditTextPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:cursorVisible="true"
                        android:gravity="center|start|bottom"
                        android:hint="@string/phone"
                        android:inputType="number"
                        android:maxLength="10"
                        android:paddingBottom="10dp"
                        android:textColor="@color/black_effective"
                        android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputLayoutPinCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pincode"
                    android:textColorHint="@color/gray"
                    app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/inputEditTextPinCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="30dp"
                        android:cursorVisible="true"
                        android:gravity="center|left|bottom"
                        android:inputType="number"
                        android:maxLength="4"
                        android:paddingBottom="10dp"
                        android:textColor="@color/black_effective"
                        android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>
            <Button
                    android:background="@color/colorPrimary"
                    android:id="@+id/buttonLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:padding="10dp"
                    android:text="@string/login"
                    android:textSize="18sp" />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:text="@string/noAccount"
                    android:textSize="14sp" />
            <Button
                    android:background="@color/gray"
                    android:id="@+id/buttonRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:padding="10dp"
                    android:text="@string/register"
                    android:textSize="18sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</ScrollView>