<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">
    <android.support.v7.widget.CardView
            android:layout_centerInParent="true"
            android:id="@+id/cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="30dp"
            app:cardCornerRadius="7dp"
            app:cardElevation="22dp">
           <LinearLayout
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical">
               <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/diversified"
                       android:textSize="25sp"
                       android:textAlignment="center"
                       android:textStyle="bold" />
               <RadioGroup
                       android:layout_marginTop="20dp"
                       android:gravity="center"
                       android:id="@+id/hasOtherCommercialCrops"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="vertical">
                   <RadioButton
                           android:id="@+id/hasOtherCommercialCropsYes"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/yes" />

                   <RadioButton
                           android:id="@+id/hasOtherCommercialCropsNo"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/no" />
               </RadioGroup>
           </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>