<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:id="@+id/layout_id"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <RelativeLayout
                android:padding="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textStyle="italic"
                    android:textSize="18sp"
                    android:text="@string/add_new_money_in_item"
                    android:layout_height="wrap_content" />
            <android.support.design.widget.TextInputLayout
                    android:layout_below="@+id/title"
                    android:id="@+id/inputLayoutItemName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/gray">
                <android.support.design.widget.TextInputEditText
                        android:id="@+id/inputEditTextItemName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:cursorVisible="true"
                        android:gravity="center|start|bottom"
                        android:hint="@string/item_name"
                        android:inputType="textCapWords"
                        android:paddingBottom="10dp"
                        android:textColor="@color/black_effective"
                        android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>
            <Button
                    android:id="@+id/saveButton"
                    android:layout_marginTop="5dp"
                    android:layout_below="@id/inputLayoutItemName"
                    android:text="@string/save"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:background="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>