<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">
    <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:background="@drawable/toolbar_bg"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:drawableTint="#fff"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:text="@string/add_new_money_out"
                        android:textSize="18sp"
                        android:textColor="#fff"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <android.support.v7.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="30dp"
            app:cardCornerRadius="7dp"
            app:cardElevation="@dimen/card_elevation_10">
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/item_name"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    <android.support.v7.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:cardElevation="10dp"
                            app:cardUseCompatPadding="true">
                        <Spinner
                                android:id="@+id/spinnerRegion"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/forms_height"
                                android:background="@drawable/rounded_edittext"
                                android:entries="@array/region_arrays"
                                android:padding="8dp" />
                    </android.support.v7.widget.CardView>
                </LinearLayout>
                <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/quantity"
                            android:textSize="20sp"
                            android:textStyle="bold"/>
                    <android.support.v7.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:cardElevation="10dp"
                            app:cardUseCompatPadding="true">
                        <EditText
                                android:id="@+id/quantity"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/forms_height"
                                android:background="@drawable/rounded_edittext"
                        />
                    </android.support.v7.widget.CardView>
                </LinearLayout>
                <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/unitcost"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    <android.support.v7.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:cardElevation="10dp"
                            app:cardUseCompatPadding="true">
                        <EditText
                                android:id="@+id/unit_price"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/forms_height"
                                android:background="@drawable/rounded_edittext"
                        />
                    </android.support.v7.widget.CardView>
                </LinearLayout>
                <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/date"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    <android.support.v7.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:cardElevation="10dp"
                            app:cardUseCompatPadding="true">
                        <EditText
                                android:id="@+id/dateAdded"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/forms_height"
                                android:background="@drawable/rounded_edittext"
                        />
                    </android.support.v7.widget.CardView>
                </LinearLayout>
                <RadioGroup
                        android:elevation="10dp"
                        android:layout_marginLeft="10dp"
                        android:id="@+id/perioid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        tools:targetApi="lollipop"
                        android:layout_marginStart="10dp">
                    <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/before_production" />

                    <RadioButton
                            android:id="@+id/personal_radiobutton_Female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/after_production" />
                </RadioGroup>
                <Button
                        android:background="@color/colorPrimary"
                        android:id="@+id/addDefaultCrop"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="15dp"
                        android:padding="10dp"
                        android:text="@string/save"
                        android:textSize="18sp" />
            </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>

</LinearLayout>