<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:padding="5dp"
        android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="30dp"
            app:cardCornerRadius="7dp"
            app:cardUseCompatPadding="false"
            android:scrollbars="vertical"
            app:cardElevation="@dimen/card_elevation_10">
        <LinearLayout
                android:layout_width="match_parent"
                android:padding="15dp"
                android:layout_height="wrap_content">
            <TextView
                    android:textColor="#fff"
                    android:id="@+id/image"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:background="@drawable/image_text"
                    android:text="P"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
            <LinearLayout
                    android:layout_marginLeft="@dimen/card_elevation_10"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/name"
                        android:text="@string/item_name"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                <TextView
                        android:id="@+id/quantity"
                        android:text="@string/quantity"
                        android:paddingTop="5dp"
                        android:textStyle="italic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                <TextView
                        android:id="@+id/unit_price"
                        android:paddingTop="5dp"
                        android:text="@string/unit_price"
                        android:textStyle="italic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                <TextView
                        android:id="@+id/dateAdded"
                        android:paddingTop="5dp"
                        android:text="@string/unit_price"
                        android:textStyle="italic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                <TextView
                        android:id="@+id/total_price"
                        android:paddingTop="5dp"
                        android:text="@string/total_price"
                        android:textStyle="italic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                <TableRow
                        android:orientation="horizontal"
                        android:layout_marginTop="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    <Button android:id="@+id/editButton"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginRight="15dp"
                            android:background="@android:drawable/ic_menu_edit"/>
                    <Button
                            android:id="@+id/deleteButton"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@android:drawable/ic_delete"/>
                </TableRow>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>